# beatingBERT

./: .env  .gitignore  QUICKSTART.md  README.md  pyproject.toml  verify_setup.py
experiments/: BENCHMARK_SUMMARY.md  EXPERIMENT_GUIDE.md  analyze_results.py  run_bert.py  run_full_benchmark.sh  run_llm.py  run_quick_test.sh  test_new_tasks.py
prompts/: few_shot_mnli_k5.json  few_shot_rte_k5.json  few_shot_sst2_k3.json  few_shot_sst2_k5.json  zero_shot_mnli.txt  zero_shot_rte.txt  zero_shot_sst2.txt
src/data/: loader.py  preprocessing.py
src/evaluation/: error_analysis.py  metrics.py
src/models/: bert_trainer.py  llm_dspy.py  llm_inference.py  llm_lora.py
src/prompts/: templates.py
src/utils/: config.py  reproducibility.py
