[project]
name = "beatingbert"
version = "0.1.0"
description = "Benchmarking small LLMs (Gemma 3 1B) vs BERT-family encoders on GLUE tasks"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "peft>=0.7.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "dspy-ai>=2.4.0",
    "ollama>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
